# autoninja

./: .bedrock_agentcore.yaml  .env.example  .gitignore  CLAUDE.md  CUSTOM_ORCHESTRATION_INTEGRATION_GUIDE.md  Makefile  README.md  SPEC.md  buildspec-backend.yml  buildspec.yml  deployment-success-summary.md  deployment-verification-steps.md  info.txt  log.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup_dev.py  test_quality_tools.py  test_supervisor.py
.bedrock_agentcore/autoninja_supervisor/: Dockerfile
.github/workflows/: deploy-backend.yml  deploy-frontend.yml
.kiro/hooks/: agentcore-hooks-summary.md  error-check-hook.kiro.hook  lambda-rate-limit-check.kiro.hook  spec-driven-start.kiro.hook  task-completion-verification.kiro.hook  venv-activation-check.kiro.hook
.kiro/settings/: mcp.json
.kiro/steering/: autoninja-implementation-patterns.md  bedrock-throttling-investigation-context.md  product.md  spec-driven-development.md  structure.md  task-execution-rules.md  tech.md
audit_reports/: validation_report_direct_llm_validation_20251008_125722.json  validation_report_direct_llm_validation_20251008_161410.json  validation_report_direct_llm_validation_20251008_202059.json  validation_report_test_incompatible_001_20251008_122057.json  validation_report_test_session_001_20251008_121637.json
autoninja/: __init__.py
autoninja/agents/: __init__.py  code_generator.py  deployment_manager.py  quality_validator.py  requirements_analyst.py  solution_architect.py
autoninja/api/: __init__.py
autoninja/audit/: __init__.py  compatibility.py  config.py  demo.py  integration.py  logger.py  orchestrator.py  reporting.py  validator.py
autoninja/core/: __init__.py  bedrock_client.py  config.py  examples.py  guardrails.py  knowledge_base.py  knowledge_base_updater.py  logging_config.py  pattern_learning.py  pipeline_logging.py  template_generation.py
autoninja/models/: __init__.py  state.py
autoninja/storage/: __init__.py  dynamodb.py  s3.py
autoninja/tools/: __init__.py  (+6 more)
docs/: .gitkeep  BEDROCK_OPENAPI_CONSTRAINTS.md  BEDROCK_RATE_LIMITS.md  FINAL_IMPLEMENTATION.md  GITHUB_DEPLOYMENT_GUIDE.md  LAMBDA_LAYER_DEPLOYMENT.md  LARGE_CONTEXT_MODELS_ANALYSIS.md  NOVA_PREMIER_MIGRATION_PLAN.md  NOVA_PROMPTING_GUIDE.md  RATE_LIMITER_REFACTOR.md  SCHEMA_DEPLOYMENT.md  SUPERVISOR_FIX_SUMMARY.md  TASK_4_COMPLETION_SUMMARY.md  TASK_5_COMPLETION_SUMMARY.md  TASK_6_COMPLETION_SUMMARY.md  TASK_7_COMPLETION_SUMMARY.md  TASK_9_COMPLETION_SUMMARY.md  agent-data-flow.md  architecture_description.md  architecture_diagram.mmd  cloudformation-markdown-prompts.md  convo1021.txt  data-insertion-flow.md  enhance.md  hackathon.md  markdown-prompts-migration.md  prompt-insertion-and-parsing.md  s3-prompt-cloudformation-example.md  selected.csv  topics.csv
examples/: .gitkeep  demo_bedrock_client.py  demo_code_generator.py  demo_deployment_manager.py  demo_pipeline_logging.py  demo_quality_validator.py  demo_requirements_analyst.py  demo_solution_architect.py  inference_explanation.md  pipeline_manual_injection.py  test_direct_inference.py  test_logging_setup.py
frontend/: README.md
lambda/: .gitkeep
plan/: CODE_GENERATOR_BLUEPRINT.md  CODE_GENERATOR_E2E_RESULTS.md  CORRECTED_ASSESSMENT.md  EXECUTIVE_SUMMARY.md  README.md  RECONSTRUCTION_CHECKLIST.md  STANDARDIZATION_PLAN.md
schemas/: .gitkeep  code-generator-schema.yaml  deployment-manager-schema-minimal.yaml  deployment-manager-schema.yaml  quality-validator-schema.yaml  requirements-analyst-schema.yaml  solution-architect-schema.yaml  supervisor-schema.yaml  template.yaml  test-minimal.yaml
scripts/: add_nova_warnings.py  check_nova_access.py  cleanup_collaborators.sh  cleanup_supervisor.sh  configure_custom_orchestration.sh  convert.py  deploy_all.sh  deploy_code_generator.sh  deploy_collaborators.sh  deploy_deployment_manager.sh  deploy_nested_stacks.sh  deploy_quality_validator.sh  deploy_requirements_analyst.sh  deploy_solution_architect.sh  deploy_supervisor.sh  escape_json_for_yaml.py  fix_trailing_spaces.py  full_cleanup.sh  package_lambda_layer.sh  restore_agent_descriptions.sh  template.sh  update_all_lambdas.sh  update_collaborator_models.sh  update_model_parameter.sh  upload_prompts_to_s3.sh  upload_schemas.sh
shared/: .gitkeep  IMPLEMENTATION_SUMMARY.md  README.md  __init__.py
tests/: .gitkeep  __init__.py  test_basic_functionality.py  test_code_generation_tools.py  test_deployment_manager_implementation.py
(+179 files in other folders)
