[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoninja-aws-bedrock"
version = "0.1.0"
description = "AI Agent Generation System built on Amazon Bedrock"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "AutoNinja Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "langchain>=0.1.0",
    "langchain-aws>=0.1.0",
    "langgraph>=0.0.40",
    "langchain-community>=0.0.20",
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "typing-extensions>=4.8.0",
    "pydantic-settings>=2.1.0",
    "aiofiles>=23.2.0",
    "httpx>=0.25.0",
    "aws-xray-sdk>=2.12.0",
    "redis>=5.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.9.0",
    "pylint>=3.0.0",
    "mypy>=1.6.0",
    "pre-commit>=3.5.0",
    "cfn-lint>=0.83.0",
    "jupyter>=1.0.0",
    "ipython>=8.17.0",
    "notebook>=7.0.0",
    "factory-boy>=3.3.0",
    "moto>=4.2.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.3.0",
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=1.3.0",
    "bandit>=1.7.0",
    "safety>=2.3.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
]

[project.urls]
Homepage = "https://github.com/autoninja/autoninja-aws-bedrock"
Repository = "https://github.com/autoninja/autoninja-aws-bedrock"
Documentation = "https://autoninja-aws-bedrock.readthedocs.io"

[tool.setuptools.packages.find]
where = ["."]
include = ["autoninja*"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["autoninja"]

[tool.pylint.messages_control]
disable = [
    "C0330",  # Wrong hanging indentation
    "C0326",  # Bad whitespace
]

[tool.pylint.format]
max-line-length = "88"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
]
python_classes = [
    "Test*",
]
python_functions = [
    "test_*",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
]

[tool.coverage.run]
source = ["autoninja"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]